// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Availability/AvailabilityGrid Vanilla 1`] = `
<div
  class="AvailabilityGrid"
>
  <div
    class="Column"
  >
    <div
      class="Top Left Cell-unselectable"
    >
      
  

    </div>
     
    <div
      class="Left Cell-unselectable"
    >
      
  12 am

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  1 am

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  2 am

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  3 am

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  4 am

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  5 am

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  6 am

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  7 am

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  8 am

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  9 am

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  10 am

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  11 am

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  12 pm

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  1 pm

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  2 pm

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  3 pm

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  4 pm

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  5 pm

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  6 pm

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  7 pm

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  8 pm

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  9 pm

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  10 pm

    </div>
    <div
      class="Left Cell-unselectable"
    >
      
  11 pm

    </div>
  </div>
   
  <div
    class="Column"
  >
    <div
      class="Top Cell-unselectable"
    >
      
  Sunday

    </div>
     
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
  </div>
  <div
    class="Column"
  >
    <div
      class="Top Cell-unselectable"
    >
      
  Monday

    </div>
     
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
  </div>
  <div
    class="Column"
  >
    <div
      class="Top Cell-unselectable"
    >
      
  Tuesday

    </div>
     
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
  </div>
  <div
    class="Column"
  >
    <div
      class="Top Cell-unselectable"
    >
      
  Wednesday

    </div>
     
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
  </div>
  <div
    class="Column"
  >
    <div
      class="Top Cell-unselectable"
    >
      
  Thursday

    </div>
     
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
  </div>
  <div
    class="Column"
  >
    <div
      class="Top Cell-unselectable"
    >
      
  Friday

    </div>
     
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
  </div>
  <div
    class="Column"
  >
    <div
      class="Top Cell-unselectable"
    >
      
  Saturday

    </div>
     
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
    <div
      class="Cell-selectable Cell-selectable--selected"
    >
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots Availability/Cell Flagged Selected 1`] = `
<div
  class="Cell-selectable Cell-selectable--selected"
>
  <!---->
</div>
`;

exports[`Storyshots Availability/Cell Flagged Unselected 1`] = `
<div
  class="Cell-selectable"
>
  <!---->
</div>
`;

exports[`Storyshots Availability/Cell Selectable Selected 1`] = `
<div
  class="Cell-selectable Cell-selectable--selected"
>
  <!---->
</div>
`;

exports[`Storyshots Availability/Cell Selectable Unselected 1`] = `
<div
  class="Cell-selectable"
>
  <!---->
</div>
`;

exports[`Storyshots Availability/Cell Unselectable 1`] = `
<div
  class="Cell-unselectable"
>
  
  Cell content

</div>
`;

exports[`Storyshots Availability/Cell Vanilla 1`] = `
<div
  class="Cell-selectable"
>
  <!---->
</div>
`;

exports[`Storyshots Components/Chip Basic 1`] = `
<div
  class="chip-item"
>
  
  Chip content

</div>
`;

exports[`Storyshots Components/Stepper All Steps Completed 1`] = `
<div
  class="stepper"
>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--complete"
      >
        <!---->
      </div>
    </div>
     
    <div
      class="progress-bar progress-bar--complete"
    />
  </div>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--complete"
      >
        <!---->
      </div>
    </div>
     
    <div
      class="progress-bar progress-bar--complete"
    />
  </div>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--complete"
      >
        <!---->
      </div>
    </div>
     
    <div
      class="progress-bar progress-bar--complete"
    />
  </div>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--complete"
      >
        <!---->
      </div>
    </div>
     
    <div
      class="progress-bar progress-bar--complete"
    />
  </div>
  <div
    class="step step--last-step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--complete"
      >
        <!---->
      </div>
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots Components/Stepper In Progress 1`] = `
<div
  class="stepper"
>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--complete"
      >
        <!---->
      </div>
    </div>
     
    <div
      class="progress-bar progress-bar--complete"
    />
  </div>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--complete"
      >
        <!---->
      </div>
    </div>
     
    <div
      class="progress-bar progress-bar--complete"
    />
  </div>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle"
      >
        <span
          class="step-display"
        >
          3
        </span>
      </div>
    </div>
     
    <div
      class="progress-bar"
    />
  </div>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--not-started"
      >
        <span
          class="step-display step-display--not-started"
        >
          4
        </span>
      </div>
    </div>
     
    <div
      class="progress-bar"
    />
  </div>
  <div
    class="step step--last-step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--not-started"
      >
        <span
          class="step-display step-display--not-started"
        >
          5
        </span>
      </div>
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots Components/Stepper No Steps Completed 1`] = `
<div
  class="stepper"
>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle"
      >
        <span
          class="step-display"
        >
          1
        </span>
      </div>
    </div>
     
    <div
      class="progress-bar"
    />
  </div>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--not-started"
      >
        <span
          class="step-display step-display--not-started"
        >
          2
        </span>
      </div>
    </div>
     
    <div
      class="progress-bar"
    />
  </div>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--not-started"
      >
        <span
          class="step-display step-display--not-started"
        >
          3
        </span>
      </div>
    </div>
     
    <div
      class="progress-bar"
    />
  </div>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--not-started"
      >
        <span
          class="step-display step-display--not-started"
        >
          4
        </span>
      </div>
    </div>
     
    <div
      class="progress-bar"
    />
  </div>
  <div
    class="step step--last-step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--not-started"
      >
        <span
          class="step-display step-display--not-started"
        >
          5
        </span>
      </div>
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots Components/Stepper Vanilla 1`] = `
<div
  class="stepper"
>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--not-started"
      >
        <span
          class="step-display step-display--not-started"
        >
          1
        </span>
      </div>
    </div>
     
    <div
      class="progress-bar"
    />
  </div>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--not-started"
      >
        <span
          class="step-display step-display--not-started"
        >
          2
        </span>
      </div>
    </div>
     
    <div
      class="progress-bar"
    />
  </div>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--not-started"
      >
        <span
          class="step-display step-display--not-started"
        >
          3
        </span>
      </div>
    </div>
     
    <div
      class="progress-bar"
    />
  </div>
  <div
    class="step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--not-started"
      >
        <span
          class="step-display step-display--not-started"
        >
          4
        </span>
      </div>
    </div>
     
    <div
      class="progress-bar"
    />
  </div>
  <div
    class="step step--last-step"
  >
    <div
      class="circle-container"
    >
      <div
        class="circle circle--not-started"
      >
        <span
          class="step-display step-display--not-started"
        >
          5
        </span>
      </div>
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots Example/Button Large 1`] = `
<button
  class="storybook-button storybook-button--secondary storybook-button--large"
  type="button"
>
  
  Button

</button>
`;

exports[`Storyshots Example/Button Primary 1`] = `
<button
  class="storybook-button storybook-button--primary storybook-button--medium"
  type="button"
>
  
  Button

</button>
`;

exports[`Storyshots Example/Button Secondary 1`] = `
<button
  class="storybook-button storybook-button--secondary storybook-button--medium"
  type="button"
>
  
  Button

</button>
`;

exports[`Storyshots Example/Button Small 1`] = `
<button
  class="storybook-button storybook-button--secondary storybook-button--small"
  type="button"
>
  
  Button

</button>
`;

exports[`Storyshots Example/FavoritingToggle Vanilla 1`] = `
<div>
  <!---->
   
  <!---->
   
  <!---->
</div>
`;

exports[`Storyshots Example/Header Logged In 1`] = `
<header>
  <div
    class="wrapper"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
           
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
           
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
       
      <h1>
        Acme
      </h1>
    </div>
     
    <div>
      <button
        class="storybook-button storybook-button--secondary storybook-button--small"
        type="button"
      >
        
  Log out

      </button>
       
      <!---->
       
      <!---->
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/Header Logged Out 1`] = `
<header>
  <div
    class="wrapper"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
           
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
           
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
       
      <h1>
        Acme
      </h1>
    </div>
     
    <div>
      <!---->
       
      <button
        class="storybook-button storybook-button--secondary storybook-button--small"
        type="button"
      >
        
  Log in

      </button>
       
      <button
        class="storybook-button storybook-button--primary storybook-button--small"
        type="button"
      >
        
  Sign up

      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/HyperlinkButton Dark 1`] = `
<button
  class="ButtonTemplate HyperlinkButton HyperlinkButton--dark"
  type="button"
>
  <span>
    Button
  </span>
   
  <!---->
</button>
`;

exports[`Storyshots Example/HyperlinkButton Primary 1`] = `
<button
  class="ButtonTemplate HyperlinkButton"
  type="button"
>
  <span>
    Button
  </span>
   
  <!---->
</button>
`;

exports[`Storyshots Example/HyperlinkButton Reverse 1`] = `
<button
  class="ButtonTemplate HyperlinkButton HyperlinkButton--reverse"
  type="button"
>
  <span>
    Button
  </span>
   
  <!---->
</button>
`;

exports[`Storyshots Example/HyperlinkButton Route To 1`] = `<!---->`;

exports[`Storyshots Example/HyperlinkButton Vanilla 1`] = `
<button
  class="ButtonTemplate HyperlinkButton"
  type="button"
>
  <span>
    Button
  </span>
   
  <!---->
</button>
`;

exports[`Storyshots Example/LargeButton Primary 1`] = `
<button
  class="ButtonTemplate LargeButton-primary"
  type="button"
>
  <span>
    Button
  </span>
   
  <!---->
</button>
`;

exports[`Storyshots Example/LargeButton Primary No Arrow 1`] = `
<button
  class="ButtonTemplate LargeButton-primary"
  type="button"
>
  <span>
    Button
  </span>
   
  <!---->
</button>
`;

exports[`Storyshots Example/LargeButton Primary With Route No Arrow 1`] = `
<button
  class="ButtonTemplate LargeButton-primary"
>
  <div>
    Button
  </div>
   
  <!---->
</button>
`;

exports[`Storyshots Example/LargeButton Reverse 1`] = `
<button
  class="ButtonTemplate LargeButton-secondary LargeButton-secondary--reverse"
  type="button"
>
  <span>
    Button
  </span>
   
  <!---->
</button>
`;

exports[`Storyshots Example/LargeButton Reverse With Route 1`] = `
<button
  class="ButtonTemplate LargeButton-secondary LargeButton-secondary--reverse"
>
  <div>
    Button
  </div>
   
  <!---->
</button>
`;

exports[`Storyshots Example/LargeButton Vanilla 1`] = `
<button
  class="ButtonTemplate LargeButton-secondary"
  type="button"
>
  <span>
    Button
  </span>
   
  <!---->
</button>
`;

exports[`Storyshots Example/LargeButton Vanilla With Route 1`] = `
<button
  class="ButtonTemplate LargeButton-secondary"
>
  <div>
    Button
  </div>
   
  <!---->
</button>
`;

exports[`Storyshots Example/LargeButton With Route 1`] = `
<button
  class="ButtonTemplate LargeButton-primary"
>
  <div>
    Button
  </div>
   
  <!---->
</button>
`;

exports[`Storyshots Example/Page Logged In 1`] = `
<article>
  <header>
    <div
      class="wrapper"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
             
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
             
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
         
        <h1>
          Acme
        </h1>
      </div>
       
      <div>
        <button
          class="storybook-button storybook-button--secondary storybook-button--small"
          type="button"
        >
          
  Log out

        </button>
         
        <!---->
         
        <!---->
      </div>
    </div>
  </header>
   
  <section>
    <h2>
      Pages in Storybook
    </h2>
     
    <p>
      
      We recommend building UIs with a
      
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
      
      process starting with atomic components and ending with pages.
    
    </p>
     
    <p>
      
      Render pages with mock data. This makes it easy to build and review page
      states without needing to navigate to them in your app. Here are some
      handy patterns for managing page data in Storybook:
    
    </p>
     
    <ul>
      <li>
        
        Use a higher-level connected component. Storybook helps you compose
        such data from the "args" of child component stories
      
      </li>
       
      <li>
        
        Assemble data in the page component from your services. You can mock
        these services out using Storybook.
      
      </li>
    </ul>
     
    <p>
      
      Get a guided tutorial on component-driven development at
      
      <a
        href="https://storybook.js.org/tutorials/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Storybook tutorials
      </a>
      
      . Read more in the
      
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      
      .
    
    </p>
     
    <div
      class="tip-wrapper"
    >
      <span
        class="tip"
      >
        Tip
      </span>
      
      Adjust the width of the canvas with the
      
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      
      Viewports addon in the toolbar
    
    </div>
  </section>
</article>
`;

exports[`Storyshots Example/Page Logged Out 1`] = `
<article>
  <header>
    <div
      class="wrapper"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
             
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
             
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
         
        <h1>
          Acme
        </h1>
      </div>
       
      <div>
        <!---->
         
        <button
          class="storybook-button storybook-button--secondary storybook-button--small"
          type="button"
        >
          
  Log in

        </button>
         
        <button
          class="storybook-button storybook-button--primary storybook-button--small"
          type="button"
        >
          
  Sign up

        </button>
      </div>
    </div>
  </header>
   
  <section>
    <h2>
      Pages in Storybook
    </h2>
     
    <p>
      
      We recommend building UIs with a
      
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
      
      process starting with atomic components and ending with pages.
    
    </p>
     
    <p>
      
      Render pages with mock data. This makes it easy to build and review page
      states without needing to navigate to them in your app. Here are some
      handy patterns for managing page data in Storybook:
    
    </p>
     
    <ul>
      <li>
        
        Use a higher-level connected component. Storybook helps you compose
        such data from the "args" of child component stories
      
      </li>
       
      <li>
        
        Assemble data in the page component from your services. You can mock
        these services out using Storybook.
      
      </li>
    </ul>
     
    <p>
      
      Get a guided tutorial on component-driven development at
      
      <a
        href="https://storybook.js.org/tutorials/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Storybook tutorials
      </a>
      
      . Read more in the
      
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      
      .
    
    </p>
     
    <div
      class="tip-wrapper"
    >
      <span
        class="tip"
      >
        Tip
      </span>
      
      Adjust the width of the canvas with the
      
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      
      Viewports addon in the toolbar
    
    </div>
  </section>
</article>
`;

exports[`Storyshots Example/RecentSubjectCard Active Card 1`] = `
<button
  class="SubjectCard"
>
  <!---->
   
  <span
    class="SubectCard-title"
  >
    Calc 1
  </span>
   
  <!---->
</button>
`;

exports[`Storyshots Example/RecentSubjectCard Default Card 1`] = `
<button
  class="SubjectCard"
>
  <!---->
   
  <span
    class="SubectCard-title"
  >
    Algebra 1
  </span>
   
  <!---->
</button>
`;

exports[`Storyshots Example/RecentSubjectCard Disabled Card 1`] = `
<button
  class="SubjectCard"
  disabled="disabled"
>
  <!---->
   
  <span
    class="SubectCard-title"
  >
    Calc 2
  </span>
   
  <!---->
</button>
`;

exports[`Storyshots Example/RecentSubjectCard Hovered Card 1`] = `
<button
  class="SubjectCard"
>
  <!---->
   
  <span
    class="SubectCard-title"
  >
    Algebra 2
  </span>
   
  <!---->
</button>
`;
